# amplify-starter

./: .gitignore  DEPLOYMENT_CHECKLIST.md  GUMWALL_README.md  README.md  UPDATE_SUMMARY.md  amplify.yml  index.html  package-lock.json  package.json
.kiro/hooks/: hackathon-interview-prep.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/gum-rating-interface/: design.md  requirements.md  tasks.md
.kiro/specs/gumwall-ai/: design.md  requirements.md  tasks.md
.kiro/specs/user-design-gallery/: design.md  requirements.md  tasks.md
.kiro/steering/: best-practices.md  hackathon-rapid-dev.md  product.md  stack.md  structure.md
amplify/: README.md  backend.ts  package.json
amplify/data/: custom-resources.ts  resource.ts
amplify/functions/gum-packs/: openapi.yaml  package.json
amplify/functions/gum-packs/create-gum-pack/: index.mjs  package-lock.json  resource.ts
amplify/functions/gum-packs/create-rating/: index.mjs  package-lock.json  package.json  resource.ts
amplify/functions/gum-packs/get-gum-pack/: index.mjs  package-lock.json  resource.ts
amplify/functions/gum-packs/get-gum-packs/: index.mjs  package-lock.json  resource.ts
amplify/functions/gum-packs/get-ratings/: index.mjs  package-lock.json  package.json  resource.ts
amplify/functions/gum-packs/update-gum-pack-stock/: index.mjs  package-lock.json  resource.ts
amplify/functions/gum-products/: openapi.yaml
amplify/functions/gum-products/create-gum-product/: handler.mjs  package-lock.json  package.json  resource.ts
amplify/functions/gum-products/get-gum-product/: handler.mjs  package-lock.json  package.json  resource.ts
amplify/functions/gum-products/get-gum-products/: handler.mjs  package-lock.json  package.json  resource.ts
amplify/functions/shared/apigateway/: responses.mjs
amplify/functions/shared/utils/: uuid.mjs  validation.mjs
amplify/storage/: resource.ts
backend/src/agents/gumwall-agent/: .bedrock_agentcore.yaml  DEPLOYMENT.md  Dockerfile  FRONTEND_INTEGRATION.md  agent.py  chat_repl.py  mcp_config.py  requirements.txt
backend/src/agents/gumwall-agent/tools/: __init__.py  color_chart.py  cost_calculator.py  progress.py  proposal.py  site_selection.py
docs/: AMPLIFY_MIGRATION.md  AMPLIFY_SETUP_SUMMARY.md  CUSTOM_DOMAIN_SETUP.md  IMPLEMENTATION_SUMMARY.md  LANDING_PAGE_UPDATE.md  LIVESTREAM_TALKING_POINTS.md  QUICKSTART.md  gum-packs.csv
gum-wall/: .gitignore  .pmcp-config.toml  Cargo.toml  Makefile  README.md
gum-wall/.pmcp/: deploy.toml
gum-wall/crates/gum-wall-calculator-server/: Cargo.toml
gum-wall/crates/gum-wall-calculator-server/src/: main.rs
gum-wall/crates/mcp-gum-wall-calculator-core/: Cargo.toml
gum-wall/crates/mcp-gum-wall-calculator-core/resources/: guide.md
gum-wall/crates/mcp-gum-wall-calculator-core/src/: graphql.rs  lib.rs  quantize.rs  s3.rs  svg.rs  types.rs  vision.rs
gum-wall/crates/server-common/: Cargo.toml
gum-wall/crates/server-common/src/: lib.rs
gum-wall/deploy/: outputs.json  package-lock.json  package.json
gum-wall/deploy/cdk.out/: gum-wall-calculator-stack.assets.json  gum-wall-calculator-stack.template.json  manifest.json  tree.json
gum-wall/deploy/lib/: stack.ts
gum-wall/gum-wall-calculator-lambda/: Cargo.toml  README.md
gum-wall/gum-wall-calculator-lambda/src/: main.rs
gum-wall/scenarios/gum-wall-calculator/: README.md
presentations/: Makefile  gum-wall-jeffbarr2-100x100.html  pink-team-hackathon.html
public/assets/js/: map.js
public/presentations/: gum-wall-results-old.html  gum-wall-results.html  pink-team-hackathon.html
scripts/: create-demo-user.mjs  create-demo-user.sh  seed-gum-products-dynamodb.mjs  seed-gum-products.mjs  setup-custom-domain.sh  test-results.md
src/: App.css  App.tsx  Presentation.tsx  Setup.tsx  amplify-config.example.ts  index.css  main.tsx
src/components/: AuthPage.tsx  Dashboard.tsx  DesignGallery.tsx  FileUpload.tsx  Header.tsx  LandingPage.tsx  MyDesigns.tsx
src/services/: gumwallApi.ts
src/utils/: storage.ts
(+1 files in other folders)
