[package]
name = "gum-wall-calculator-lambda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
# ⚠️  REQUIRED: AWS Lambda Custom Runtime API requires this exact name
# This is a platform requirement and cannot be changed.
# See: https://docs.aws.amazon.com/lambda/latest/dg/runtimes-custom.html
path = "src/main.rs"

[dependencies]
mcp-gum-wall-calculator-core = { path = "../crates/mcp-gum-wall-calculator-core" }
server-common = { path = "../crates/server-common" }
pmcp = { workspace = true }

# Lambda runtime
lambda_http = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1.19"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
