[package]
name = "gum-wall-calculator-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "gum-wall-calculator-server"
path = "src/main.rs"

[dependencies]
mcp-gum-wall-calculator-core = { path = "../mcp-gum-wall-calculator-core" }
server-common = { path = "../server-common" }
tokio = { workspace = true }
anyhow = { workspace = true }
