[package]
name = "mcp-gum-wall-calculator-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
pmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
tokio = { workspace = true }

# AWS SDK for S3
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }

# HTTP client for OpenAI and GraphQL
reqwest = { workspace = true }

# Image processing
image = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
